force-app/main/default/objects/Redirection__mdt/Redirection__mdt.object-meta.xml
<CustomObject>
    <description>Redirection records specify the navigation routing details for the Bouncer LWC.</description>
    <label>Redirection</label>
    <pluralLabel>Redirections</pluralLabel>
</CustomObject>