force-app/main/default/objects/Redirection__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <metadataRelationshipControllingField>Redirection__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Redirections</relationshipLabel>
    <relationshipName>Redirections</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>