force-app/main/default/objects/Redirection__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Redirections</relationshipLabel>
    <relationshipName>Redirections</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>