force-app/main/default/objects/Redirection__mdt/fields/RuleType__c.field-meta.xml
<CustomField>
    <fullName>RuleType__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Value</fullName>
                <default>true</default>
                <label>Field Value</label>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>