force-app/main/default/objects/Redirection__mdt/validationRules/Field_Value_rules_cannot_specify_a_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Value_rules_cannot_specify_a_URL</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(RuleType__c, &apos;Field Value&apos;)
&amp;&amp;
NOT(ISBLANK(Url__c))</errorConditionFormula>
    <errorDisplayField>Url__c</errorDisplayField>
    <errorMessage>Field Value rules cannot specify a URL</errorMessage>
</ValidationRule>