force-app/main/default/objects/Redirection__mdt/validationRules/Field_Value_rules_must_specify_details.validationRule-meta.xml
<ValidationRule>
    <fullName>Field_Value_rules_must_specify_details</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(RuleType__c, &apos;Field Value&apos;)
&amp;&amp;
(
  ISBLANK(Object__c)
  ||
  ISBLANK(Field__c)
)</errorConditionFormula>
    <errorDisplayField>Field__c</errorDisplayField>
    <errorMessage>Field Value rules must specify an object and a field</errorMessage>
</ValidationRule>