force-app/main/default/objects/Redirection__mdt/validationRules/URL_rules_cannot_specify_object_field.validationRule-meta.xml
<ValidationRule>
    <fullName>URL_rules_cannot_specify_object_field</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(RuleType__c, &apos;URL&apos;)
&amp;&amp;
(
  NOT(ISBLANK(Object__c))
  ||
  NOT(ISBLANK(Field__c))
)</errorConditionFormula>
    <errorDisplayField>Object__c</errorDisplayField>
    <errorMessage>URL rules cannot specify an object or a field</errorMessage>
</ValidationRule>