force-app/main/default/objects/Redirection__mdt/validationRules/URL_rules_must_specify_a_URL.validationRule-meta.xml
<ValidationRule>
    <fullName>URL_rules_must_specify_a_URL</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(RuleType__c, &apos;URL&apos;)
&amp;&amp;
ISBLANK(Url__c)</errorConditionFormula>
    <errorDisplayField>Url__c</errorDisplayField>
    <errorMessage>URL rules must specify a URL</errorMessage>
</ValidationRule>